mdapipkg/objects/GL_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <description>This needs to be changed to Date datatype.</description>
        <label>Batch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>This is historical and will be removed from the page layout.</description>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Amount__c</fullName>
        <label>Control Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_on_the_Fly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created on the Fly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is historical and will be removed from the page layout.</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>GL Batch</relationshipLabel>
        <relationshipName>GL_Batch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Detail_Created_Date__c</fullName>
        <label>GL Detail Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GL_Detail_Created__c</fullName>
        <label>GL Detail Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>ERROR - See Batch Error Report</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This needs to be deleted.</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <label>Posted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <label>Posted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>ERROR - See Batch Error Report</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_GL_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for GL Detail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Post?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard GL Detail Creation</fullName>
                    <default>true</default>
                    <label>Standard GL Detail Creation</label>
                </value>
                <value>
                    <fullName>Membership and Subscriptions Revenue Recognition</fullName>
                </value>
                <value>
                    <fullName>Event Revenue Recognition by Event Number</fullName>
                </value>
                <value>
                    <fullName>Refund Processing</fullName>
                </value>
                <value>
                    <fullName>Chapter Reimbursement Processing</fullName>
                </value>
                <value>
                    <fullName>Close Date Related Revenue Recognition</fullName>
                </value>
                <value>
                    <fullName>Event Revenue Recognition by Event Date</fullName>
                </value>
                <value>
                    <fullName>Custom Batch Type</fullName>
                </value>
                <value>
                    <fullName>GL Account/Company Restructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>GL Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GL_Batch_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Closed__c</columns>
        <columns>Batch_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>GL Batch Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>SF{0000}</displayFormat>
        <label>GL Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>